# Copyright (C) 2022 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# Released under the terms of the BSD 3-Clause License

[metadata]
name = icub_models
description = Visualizer for robot logger
author = 'Giulio Romualdi'
author_email = 'giulio.romualdi@iit.it'
license = Creative Commons Attribution Share Alike 4.0 International
license_file = LICENSE
url = https://github.com/robotolgy/icub-models
version = 1.23.0
platforms = any

keywords =
    robotics
    gazebo
    urdf
    ros
    icub
    gazebo-models
    gazebo-simulators

[options]
packages = find:
python_requires = >=3.8
package_dir =
  = python

[options.packages.find]
where = python
