# Copyright (C) 2022 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# Released under the terms of the BSD 3-Clause License

[metadata]
name = icub_models
description = Official URDF and SDF models of the iCub humanoid robot.
long_description = file: README.md
long_description_content_type = text/markdown
author = Giulio Romualdi
author_email = giulio.romualdi@gmail.com
license = Creative Commons Attribution Share Alike 4.0 International
license_file = LICENSE
url = https://github.com/robotology/icub-models
platforms = any

project_urls =
    Changelog = https://github.com/robotology/icub-models/releases
    Tracker = https://github.com/robotology/icub-models/issues
    Source = https://github.com/robotology/icub-models

keywords =
    robotics
    gazebo
    urdf
    ros
    icub
    gazebo-models
    gazebo-simulators

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8
package_dir =
  = python

[options.packages.find]
where = python

[options.extras_require]
test =
        pytest
        black

[tool:pytest]
addopts = --capture=no --verbose
